# tee-time-checker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  courses.toml  fly.toml  pyproject.toml
investigation/: capture.py  commonground_requests.jsonl  commonground_summary.txt  cps_requests.jsonl  cps_summary.txt  fossiltrace_requests.jsonl  fossiltrace_summary.txt  membersports_requests.jsonl  membersports_summary.txt  noteefy_requests.jsonl  noteefy_summary.txt  quick18_requests.jsonl  quick18_summary.txt  riverdale_requests.jsonl  riverdale_summary.txt
investigation/commonground_bodies/: 02.json  03.json  04.json  05.json  06.json  07.json
investigation/fossiltrace_bodies/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  11.json  13.json  14.json  15.json
investigation/membersports_bodies/: 01.json  03.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  16.json
investigation/noteefy_bodies/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json
investigation/quick18_bodies/: 01.json
investigation/riverdale_bodies/: 02.json  03.json  04.json  05.json  06.json  07.json
tee_time_checker/: cli.py  co_zips.json  config.py  daylight.py  domain.py  geo.py  parser.py  profile.py  search.py  sms.py  state.py  summary.py  watcher.py  web.py
tee_time_checker/adapters/: base.py  chronogolf.py  cps.py  membersports.py  noteefy.py  quick18.py  teeitup.py
