[project]
name = "tee-time-checker"
version = "0.1.0"
description = "SMS-driven tee time availability checker across multiple booking platforms"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "apscheduler>=3.11.2",
    "astral>=3.2",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "discord.py>=2.4.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
tt = "tee_time_checker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tee_time_checker"]

[dependency-groups]
# Tools used only for ad-hoc platform recon, not in the deployed service.
recon = [
    "playwright>=1.59.0",
]
